# tai

./: .gitignore  README.md  pyproject.toml
app/: deps.py  main.py  test.py
app/agent/: MultiAgent设计思路.md  __init__.py  approval.py  base.py  graph.py  nodes.py  registry.py  state.py  types.py
app/agent/memory/: __init__.py  manager.py
app/agent/prompts/: __init__.py  chat_agent.yaml  manager.py
app/agent/tools/: __init__.py  registry.py
app/agent/workers/: __init__.py  chat_agent.py  rag_agent.py
app/agents/: graph.py  nodes.py  state.py
app/api/routers/: chat.py  rag.py
app/core/: config.py  cost.py  deps.py  lifecycle.py  llm.py  logger.py  milvus_client.py  minio_manager.py  postgre_manager.py  redis_manager.py  redis_memory.py  tracing.py
app/core/model/: __init__.py  model_dispatcher.py  model_factory.py
app/core/storage/: base.py  minio_storage.py
app/delivery/: __init__.py
app/delivery/fastapi/: __init__.py  main.py  result.py
app/domain/: __init__.py
app/domain/agent/: __init__.py  base.py  graph.py  nodes.py  registry.py  types.py
app/domain/agentx/: graph.py
app/infrastructure/: __init__.py
app/models/: postgre_models.py
app/rag/: __init__.py  doc_convertor.py  filter.py  parser.py  splitter.py
app/schemas/: chat.py  rag.py
app/services/: chat_service.py  rag_service.py
app/shared/: __init__.py  config.py  cost.py  lifecycle.py  logger.py  tracing.py
app/tools/: __init__.py  message_adapter.py
docker/: docker-compose.yaml
sql/: pg_init.sql
tests/: test_agent_core.py  test_model.py  test_routing.py
(+82 files in other folders)
