[project]
name = "tai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-redis>=0.4.1",
    "psycopg2-binary>=2.9.12",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uuid6>=2025.0.1",
]
