[project]
name = "tai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-redis>=0.4.1",
    "langsmith>=0.8.1",
    "minio>=7.2.20",
    "openai>=2.36.0",
    "psycopg2-binary>=2.9.12",
    "pymilvus>=3.0.0",
    "pymupdf4llm>=1.27.2.3",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uuid6>=2025.0.1",
]
